Bug 114113 - No color highlighting of reference if it contains sheet name in single quotes (with spaces)
Summary: No color highlighting of reference if it contains sheet name in single quotes...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-28 08:52 UTC by Mike Kaganski
Modified: 2018-11-30 12:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2017-11-28 08:52:30 UTC
When a reference in a spreadsheet formula contains the sheet name in single quotes (e.g., when the sheet name contains spaces), the reference isn't color-highlighted.

Steps to reproduce:

1. In a new spreadsheet, in the default sheet (Sheet1), enter "=Sheet1.A2" to A1.
2. After reentering the formula bar of A1, see that A2 is highlighted with blue (both the cell itself, and its name in formula bar).
3. Now rename the sheet to "Sheet 1" (add space between "Sheet" and "1").
4. Reenter A1 formula bar; notice that the formula now looks like "='Sheet 1'.A2".

Expected result: A2 should be highlighted, as at step 2.

Actual: A2 isn't highlighted, neither on spreadsheet, nor in formula bar.

Reproducible with Version: 6.1.0.0.alpha0+ (x64)
Build ID: 401a3d2336bf46b38235c498ff86ff675d0de759
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: ru-RU (ru_RU); Calc: CL

and also with OpenOffice.org 3.3.0
OOO330m20 (Build:9567)
Comment 1 Jacques Guilleron 2017-11-29 10:18:15 UTC
Hi Mike,

Reproduced with
LO 6.0.0.0.beta1 Build ID: 97471ab4eb4db4c487195658631696bb3238656c
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; 
Locale : en-US (fr_FR); Calc: CL
and
LO 3.5.3.2 Version ID : 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
Notice that Changing the space by an underscore doen't produce this behavior.
Comment 2 QA Administrators 2018-11-30 03:59:11 UTC Comment hidden (obsolete, spam)
Comment 3 Mike Kaganski 2018-11-30 10:53:10 UTC
https://gerrit.libreoffice.org/64334
Comment 4 Commit Notification 2018-11-30 12:33:43 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ca8c0452d98c86a61f69f6700d844135944620ac%5E%21

tdf#114113: handle quoted sheet names

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.