tdf#114113: handle quoted sheet names

Change-Id: I569903fc06448fe6ee7f948488319b6b1f1f8fbb
Reviewed-on: https://gerrit.libreoffice.org/64334
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>